2003-05-07	ujwal

    * When a new Default Session entry is created, the font is 
      set to FreeMonoBold.
      
    * Added Applescript support to get tty name. Sessions can 
      also be referenced by id which is the same as the tty name.

2003-05-07	fabian
    * Incorporated patch from Peter Lewis
    * Added paragraph style into deault attributes: We now clip
      everything that goes beyond the border.
      
2003-05-07	ujwal

    * Fixed a bug in switching font from Osaka-Mono to FreeMono.
    
    * Fixed bug in window resize.

2003-05-06	fabian/ujwal

    * Release of version 0.7.0

2003-05-06	fabian
    * Updated Korean localizations
    * Updated French localizations
    * Updated web files (not uploaded yet) and help files.
    
2003-05-05	ujwal

    * Bundling FreeMono font with the application. If Osaka-Mono is 
      seen as the preferred font, we switch to FreeMono.
      
    * Changed version number from 0.7.0 to 0.70 since it is easier to 
      parse into a number.

    * Updated some help files.

2003-05-02	ujwal

    * Distinguising session name and windwo title. Storing window 
      separately from session name in session.
      
    * Added support to terminate a session via Applescript.

2003-05-01	fabian
    * removed scrollback settings in UI for performance reasons.
    * Japanese nib file updated
    
2003-04-29	ujwal

    * Fixed bug in storing and reading for scrollback lines preference.
    
    * default scrollback value is 1000.

2003-04-29	fabian
    * Fixed a bug in VT100Screen's removeOverLine
    * Implemented custom setting of scrollback buffer size
    * a little bit code cleanup in MainMenu and PseudoTerminal.
    
    
2003-04-29	ujwal

    * Added Applescript support for "write text <text>" 
      and "write contents of file <file>" to a session.

    * A little more code consolidation in PseudoTerminal.
    
    * Added Applescript support to select session by name:
      select session named "aName"
